favicon fixed, chat scrollbar & date fixed, user profile selectable fieldset, delete button right float

--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,7 @@ body {
     outline: none;
     padding: 0;
 }
+
+* {
+    box-sizing: border-box;
+}
